# bookbuilderpy

./: .buildinfo  .gitignore  LICENSE.html  Makefile  README.html  README.md  bookbuilderpy.html  bookbuilderpy.resources.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: README.doctree  bookbuilderpy.doctree  bookbuilderpy.resources.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: build.yaml
_modules/: index.html
_modules/bookbuilderpy/: build.html  build_result.html  compress.html  format_python.html  git.html  html.html  logger.html  pandoc.html  parse_metadata.html  path.html  pdf.html  preprocessor.html  preprocessor_code.html  preprocessor_commands.html  preprocessor_input.html  shell.html  source_tools.html  strings.html  temp.html  types.html  url.html  versions.html  website.html
_modules/bookbuilderpy/resources/: _resource.html  _resource_server.html
_sources/: README.md.txt  bookbuilderpy.resources.rst.txt  bookbuilderpy.rst.txt  index.rst.txt  modules.rst.txt
_static/: bizstyle.js  documentation_options.js
bookbuilderpy/: __init__.py  _build_commands.py  build.py  build_result.py  compress.py  constants.py  format_python.py  git.py  html.py  io.py  latex.py  logger.py  pandoc.py  parse_metadata.py  path.py  pdf.py  preprocessor.py  preprocessor_code.py  preprocessor_commands.py  preprocessor_input.py  shell.py  source_tools.py  strings.py  temp.py  types.py  url.py  version.py  versions.py  website.py
bookbuilderpy/resources/: GitHub.html5  __init__.py  _generate_resources.py  _resource.py  _resource_server.py  eisvogel.tex  mathjax.js
docs/source/: conf.py  index.rst
tc/: d_0c5cb28cbe015d23___init___py.html  d_0c5cb28cbe015d23__generate_resources_py.html  d_0c5cb28cbe015d23__resource_py.html  d_0c5cb28cbe015d23__resource_server_py.html  d_aca82aaa7456caf0___init___py.html  d_aca82aaa7456caf0_build_py.html  d_aca82aaa7456caf0_build_result_py.html  d_aca82aaa7456caf0_compress_py.html  d_aca82aaa7456caf0_constants_py.html  d_aca82aaa7456caf0_format_python_py.html  d_aca82aaa7456caf0_git_py.html  d_aca82aaa7456caf0_html_py.html  d_aca82aaa7456caf0_logger_py.html  d_aca82aaa7456caf0_pandoc_py.html  d_aca82aaa7456caf0_parse_metadata_py.html  d_aca82aaa7456caf0_path_py.html  d_aca82aaa7456caf0_pdf_py.html  d_aca82aaa7456caf0_preprocessor_code_py.html  d_aca82aaa7456caf0_preprocessor_commands_py.html  d_aca82aaa7456caf0_preprocessor_input_py.html  d_aca82aaa7456caf0_preprocessor_py.html  d_aca82aaa7456caf0_shell_py.html  d_aca82aaa7456caf0_source_tools_py.html  d_aca82aaa7456caf0_strings_py.html  d_aca82aaa7456caf0_temp_py.html  d_aca82aaa7456caf0_types_py.html  d_aca82aaa7456caf0_url_py.html  d_aca82aaa7456caf0_version_py.html  d_aca82aaa7456caf0_versions_py.html  d_aca82aaa7456caf0_website_py.html  index.html  status.json
tests/: test_build.py  test_build2.py  test_format_python.py  test_git.py  test_io.py  test_links_in_documentation.py  test_links_in_readme_md.py  test_load_code.py  test_parse_metadata.py  test_path.py  test_resource.py  test_source_tools.py  test_temp.py
