[metadata]
name = bookbuilderpy
version = attr: bookbuilderpy.version.__version__
description = A package for compiling electronic books.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    electronic books
    books
    markdown
    html
    pdf
    epub
    azw3
    pandoc
license = GPL 3.0
license_files = file: LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
url = https://thomasweise.github.io/bookbuilderpy
author = Thomas Weise
author_email = tweise@ustc.edu.cn
project_urls =
    Documentation = https://thomasweise.github.io/bookbuilderpy
    Source = https://github.com/thomasWeise/bookbuilderpy/
    Tracker = https://github.com/thomasWeise/bookbuilderpy/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.9
install_requires =
    beautifulsoup4 >= 4.10.0
    markdown >= 3.3.6
    minify_html >= 0.8.0
    pyyaml >= 6.0
    regex >= 2022.04.24
    selenium >= 4.1.3
    strip-hints >= 0.1.10
    urllib3 >= 1.26.9
    yapf >= 0.32.0

[options.package_data]
bookbuilderpy.resources = *.*

[options.packages.find]
exclude =
    .github*
    .mypy_cache*
    .pytest_cache*
    dist*
    docs*
    examples*
    tests*
    bookbuilderpy.egg-info*
